fix: change logic on Bloggers/Adv pages with zeroLength responce data , rework styles on this pages and Cta/HowItworks section main pages

--- a/src/entities/optionCard/UI/styles.module.scss
+++ b/src/entities/optionCard/UI/styles.module.scss
@@ -3,7 +3,7 @@
   grid-auto-flow: column;
   column-gap: 20px;
   align-items: center;
-  margin-bottom: 20px;
+  justify-content: start;
 
   font-size: 16px;
   font-style: normal;
