--- a/src/widgets/barFilter/UI/styles.module.scss
+++ b/src/widgets/barFilter/UI/styles.module.scss
@@ -1,364 +1,11 @@
-.profile__filter {
-  // display: grid;
-  // grid-auto-flow: row;
-
-  hr {
-    height: 2px;
-    background: #d9d9d9;
-    margin-bottom: 20px;
-  }
-}
-
-.card {
+.wrapper {
   display: grid;
   grid-auto-flow: row;
+  row-gap: 20px;
+  margin-bottom: 40px;
 
-  border-radius: 12px;
-  border: 0.5px solid #4772e6;
-  padding-top: 20px;
-  // margin-bottom: 20px;
-  // max-width: 1105px;
-  width: 100%;
-}
-
-.card__top {
-  display: grid;
-  grid-auto-flow: column;
-}
-
-.card__left {
-  display: grid;
-  grid-auto-flow: row;
-  row-gap: 10px;
-  max-width: 345px;
-  border-right: 1px solid #d9d9d9;
-  padding: 0 20px 0 30px;
-
-  p {
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: normal;
-    color: var(--Personal-colors-black);
-  }
-
-  span {
+  .filter {
     display: grid;
-    grid-auto-flow: column;
-    align-items: center;
-    justify-content: space-between;
-
-    small {
-      color: #a8a4a4;
-      font-size: 12px;
-      font-style: normal;
-      font-weight: 500;
-      line-height: normal;
-    }
+    grid-template: 1fr/ 1fr 1fr 1fr;
   }
-
-  hr {
-    height: 1px;
-    background: #d9d9d9;
-  }
-
-  div {
-    border-radius: 12px;
-    background: rgba(15, 105, 201, 0.1);
-
-    height: 70px;
-    text-align: center;
-    align-items: center;
-    display: grid;
-
-    p {
-      font-size: 26px;
-      font-style: normal;
-      font-weight: 600;
-      line-height: normal;
-      color: var(--Personal-colors-black);
-    }
-  }
-}
-
-.card__right {
-  display: grid;
-  grid-auto-flow: row;
-
-  border-right: 1px solid #d9d9d9;
-  padding: 0 20px;
-
-  hr {
-    height: 1px;
-    background: #d9d9d9;
-  }
-}
-
-.card__data {
-  display: grid;
-  grid-auto-flow: column;
-  align-items: center;
-  justify-content: space-between;
-  margin-bottom: 30px;
-
-  div {
-    display: grid;
-    grid-auto-flow: column;
-    column-gap: 10px;
-    color: car(--Personal-colors-black);
-
-    p {
-      font-size: 14px;
-      font-style: normal;
-      font-weight: 400;
-      line-height: normal;
-    }
-
-    span {
-      color: var(--Personal-colors-black);
-      font-size: 14px;
-      font-style: normal;
-      font-weight: 500;
-      line-height: normal;
-    }
-  }
-}
-
-.card__info {
-  display: grid;
-  grid-auto-flow: column;
-  align-items: center;
-  justify-content: space-between;
-  color: var(--Personal-colors-black);
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: normal;
-
-  div {
-    display: grid;
-    grid-auto-flow: column;
-    align-items: center;
-    column-gap: 10px;
-
-    padding: 10px 20px;
-    border-radius: 8px;
-    border: 1px solid #4772e6;
-  }
-}
-
-.card__more {
-  padding: 0 15px;
-  display: grid;
-  grid-auto-flow: column;
-  align-items: start;
-  svg {
-    width: 24px;
-  }
-}
-.card__btn {
-  padding: 11px 0;
-  width: 100%;
-
-  color: #fff;
-  font-size: 12px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: normal;
-  line-height: 0.75;
-  border-radius: 12px;
-}
-
-.more {
-  margin-top: 20px;
-  background: var(--Gradients-Gradient-1);
-}
-
-.less {
-  color: var(--Gradients-Gradient-1);
-  background: #fff;
-}
-
-.subcard {
-  display: grid;
-  grid-auto-flow: row;
-  align-items: center;
-  row-gap: 10px;
-  margin-top: 20px;
-  padding: 10px;
-  border-radius: 12px;
-  border: 1px solid #4772e6;
-  background: var(--Personal-colors-White);
-}
-
-.subcard__row {
-  display: grid;
-  grid-auto-flow: column;
-  column-gap: 5px;
-  align-items: center;
-}
-
-.subcard__left {
-  display: grid;
-  grid-auto-flow: column;
-  border-radius: 15px;
-  border: 1px solid #d9d9d9;
-  padding: 10px 0;
-}
-
-.channel__preview {
-  display: grid;
-  grid-auto-flow: row;
-  row-gap: 10px;
-  border-right: 1px solid #d9d9d9;
-
-  p {
-    color: var(--Personal-colors-black);
-    text-align: center;
-    font-size: 12px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: normal;
-  }
-
-  span {
-    color: #9e9e9e;
-    text-align: center;
-    font-size: 10px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: normal;
-  }
-}
-.channel__logo {
-  display: grid;
-  align-items: center;
-  justify-content: center;
-
-  img {
-    width: 64px;
-    height: 64px;
-    border-radius: 64px;
-    border: 0.5px solid var(--Gradients-Gradient-1);
-  }
-}
-
-.channel__column {
-  color: var(--Personal-colors-black);
-  border-right: 1px solid #d9d9d9;
-  padding: 0 15px;
-
-  div {
-    display: grid;
-    grid-auto-flow: row;
-    align-items: center;
-    text-align: center;
-    row-gap: 22px;
-    padding: 10px 0;
-  }
-
-  hr {
-    height: 1px;
-    background: #d9d9d9;
-  }
-
-  p {
-    font-size: 10px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: normal;
-  }
-
-  span {
-    font-size: 12px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-  }
-}
-
-.channel__info {
-  display: grid;
-  grid-auto-flow: row;
-  row-gap: 15px;
-  border-radius: 10px;
-  background: rgba(15, 105, 201, 0.1);
-  padding: 15px 30px;
-  margin: 0 10px;
-
-  svg {
-    width: 14px;
-    height: auto;
-  }
-}
-
-.channel__info_row {
-  display: grid;
-  grid-auto-flow: column;
-  justify-content: space-between;
-}
-
-.info {
-  display: grid;
-  grid-auto-flow: row;
-  row-gap: 10px;
-  align-items: center;
-
-  div {
-    display: grid;
-    align-items: center;
-    justify-content: center;
-  }
-
-  p {
-    color: rgba(0, 0, 0, 0.6);
-    text-align: center;
-    font-size: 8px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: normal;
-  }
-
-  span {
-    color: var(--Personal-colors-black);
-    text-align: center;
-    font-size: 10px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: normal;
-  }
-}
-
-.channel__info_middle {
-  display: grid;
-  grid-auto-flow: column;
-
-  div {
-    display: grid;
-    align-items: center;
-    justify-content: center;
-
-    svg {
-      height: 15px;
-      width: auto;
-    }
-  }
-}
-
-.subcard__right {
-  border-radius: 15px;
-  border: 1px solid #d9d9d9;
-  height: 100%;
-}
-
-.colorline {
-  height: 20px;
-  // width: 100%;
-  width: 200px;
-  background: linear-gradient(
-    to right,
-    blue var(--color1, 0%),
-    pink var(--color2, 100%)
-  );
-  // background: linear-gradient(to right, blue 50%, pink var(--women));
 }
