--- a/src/entities/bloggerModPlatformCard/UI/styles.module.scss
+++ b/src/entities/bloggerModPlatformCard/UI/styles.module.scss
@@ -1,106 +1,99 @@
 .card {
   display: grid;
-  grid-auto-flow: column;
+  grid-template: 1fr / 3.5fr 1.5fr 4.5fr 6fr;
   border-radius: 12px;
-  border: 1px solid #4772e6;
+  border: 1px solid var(--Personal-colors-main);
   padding: 10px 30px;
-  margin-bottom: 10px;
-
-  div {
-    display: grid;
-    align-items: center;
-    text-align: center;
-  }
-}
-
-.channel__preview {
-  display: grid;
-  grid-auto-flow: column;
   align-items: center;
-  column-gap: 20px;
-  justify-content: space-between;
-  border-right: 1px solid #d9d9d9;
-  padding-right: 20px;
 
-  div {
+  &__preview {
     display: grid;
-    grid-auto-flow: row;
-    row-gap: 10px;
-    text-align: left;
+    grid-template: 1fr / 1fr 2fr;
+    align-items: center;
+    column-gap: 20px;
+    border-right: 1px solid var(--Card-separator);
+    padding-right: 20px;
 
-    p {
-      color: var(--Personal-colors-black);
-      font-size: 16px;
-      font-style: normal;
-      font-weight: 600;
-      line-height: normal;
-      line-height: 0.75;
+    &__description {
+      display: grid;
+      grid-auto-flow: row;
+      row-gap: 10px;
+      text-align: left;
+
+      p {
+        color: var(--Personal-colors-black);
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 600;
+        line-height: 0.75;
+      }
+
+      span {
+        color: rgba(0, 0, 0, 0.6);
+        font-size: 12px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 0.75;
+      }
     }
 
-    span {
-      color: rgba(0, 0, 0, 0.6);
-      font-size: 12px;
+    &__logo {
+      display: grid;
+      align-items: center;
+      justify-content: center;
+
+      img {
+        width: 64px;
+        height: 64px;
+        border-radius: 64px;
+        border: 0.5px solid var(--Personal-colors-main);
+      }
+    }
+  }
+
+  &__date {
+    display: grid;
+    align-items: center;
+    color: var(--Personal-colors-black);
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    border-right: 1px solid var(--Card-separator);
+    margin-left: 20px;
+    padding-right: 20px;
+    height: 100%;
+  }
+
+  &__status {
+    display: grid;
+    grid-auto-flow: row;
+    border-right: 1px solid var(--Card-separator);
+    margin-left: 20px;
+    padding-right: 20px;
+
+    p {
+      display: grid;
+      align-items: center;
+      justify-content: center;
+      border-radius: 12px;
+      background: rgba(15, 105, 201, 0.1);
+      padding: 20px 0;
+
+      color: var(--Personal-colors-black);
+      font-size: 20px;
       font-style: normal;
       font-weight: 500;
       line-height: normal;
-      line-height: 0.75;
     }
   }
-}
 
-.channel__logo {
-  display: grid;
-  align-items: center;
-  justify-content: center;
-
-  img {
-    width: 64px;
-    height: 64px;
-    border-radius: 64px;
-    border: 0.5px solid var(--Gradients-Gradient-1);
-  }
-}
-
-.card__date {
-  color: var(--Personal-colors-black);
-  font-size: 15px;
-  font-style: normal;
-  font-weight: 600;
-  line-height: normal;
-  border-right: 1px solid #d9d9d9;
-  margin-left: 20px;
-  padding-right: 20px;
-}
-
-.card__status {
-  display: grid;
-  grid-auto-flow: row;
-
-  border-right: 1px solid #d9d9d9;
-  margin-left: 20px;
-  padding-right: 20px;
-
-  p {
-    display: grid;
-    align-items: center;
-    justify-content: center;
-    border-radius: 12px;
-    background: rgba(15, 105, 201, 0.1);
-    padding: 20px 0;
-
+  &__info {
+    margin-left: 20px;
     color: var(--Personal-colors-black);
-    font-size: 20px;
+    font-size: 14px;
     font-style: normal;
     font-weight: 500;
     line-height: normal;
   }
-}
-
-.card__info {
-  margin-left: 20px;
-  color: var(--Personal-colors-black);
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: normal;
 }
