--- a/src/features/barTop/UI/styles.module.scss
+++ b/src/features/barTop/UI/styles.module.scss
@@ -1,17 +1,21 @@
 .top {
-  margin: 30px 0;
+  margin-top: 30px;
   display: grid;
   grid-auto-flow: column;
   justify-content: space-between;
   align-items: center;
   text-align: center;
+  padding-bottom: 30px;
+  border-bottom: 1px solid var(--Card-separator);
+
   p {
     color: var(--Personal-colors-black);
-    font-size: 26px;
+    font-size: 44px;
     font-style: normal;
-    font-weight: 500;
+    font-weight: 600;
     line-height: normal;
   }
+
   div {
     display: grid;
     grid-auto-flow: column;
