--- a/src/features/bloggerPlatformCard/UI/styles.module.scss
+++ b/src/features/bloggerPlatformCard/UI/styles.module.scss
@@ -1,23 +1,17 @@
-.card {
+.wrapper {
   display: grid;
   grid-auto-flow: row;
+  row-gap: 20px;
   border-radius: 12px;
   box-shadow: inset 0px 0px 0px 1px var(--Personal-colors-main);
   padding-top: 20px;
   width: 100%;
 
-  hr {
-    height: 1px;
-    background: var(--Card-separator);
-    margin-bottom: 20px;
-  }
-
-  .card__top {
+  .card {
     display: grid;
     grid-template: 1fr / 1fr 3fr 4fr 0.4fr;
-    margin-bottom: 20px;
 
-    .channel__logo {
+    &__logo {
       display: grid;
       align-items: center;
       justify-items: center;
@@ -29,7 +23,7 @@
         width: 64px;
         height: 64px;
         border-radius: 64px;
-        border: 0.5px solid var(--Gradients-Gradient-1);
+        border: 0.5px solid var(--Personal-colors-main);
       }
 
       svg {
@@ -37,7 +31,7 @@
       }
     }
 
-    .card__description {
+    &__description {
       display: grid;
       grid-auto-flow: row;
       border-right: 1px solid var(--Card-separator);
@@ -114,7 +108,7 @@
       }
     }
 
-    .card__info {
+    &__info {
       display: grid;
       grid-template: 1fr 0.5fr / 1fr;
       border-right: 1px solid var(--Card-separator);
@@ -200,7 +194,7 @@
       }
     }
 
-    .card__more {
+    &__more {
       padding: 0 15px;
       display: grid;
       grid-auto-flow: row;
@@ -211,47 +205,34 @@
       }
     }
   }
-}
+  .card__btn {
+    padding: 11px 0;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 0.75;
+  }
 
-.card__btn {
-  padding: 11px 0;
-  font-size: 12px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: 0.75;
-}
+  .platform__events {
+    display: grid;
+    grid-template: 1fr /1fr 1fr 1fr;
+    column-gap: 20px;
+    padding: 0 20px;
+    border-radius: 12px;
+    border-top: 1px solid var(--Gradients-Gradient-1);
 
-.more {
-  margin-top: 20px;
-  background: var(--Gradients-Gradient-1);
-}
+    button {
+      border-radius: 8px;
+      border: 1px solid var(--Personal-colors-main);
 
-.less {
-  color: var(--Gradients-Gradient-1);
-  background: #fff;
-}
-
-.platform_events {
-  display: grid;
-  grid-template: 1fr /1fr 1fr 1fr;
-  column-gap: 20px;
-  margin-top: 10px;
-  padding: 10px 10px 0px 10px;
-  border-radius: 12px;
-  border-top: 1px solid var(--Gradients-Gradient-1);
-  margin-bottom: 20px;
-
-  button {
-    border-radius: 8px;
-    border: 1px solid var(--Personal-colors-main);
-
-    p {
-      color: var(--Gradients-Gradient-1);
-      font-size: 20px;
-      font-style: normal;
-      font-weight: 500;
-      line-height: normal;
-      padding: 10px;
+      p {
+        color: var(--Gradients-Gradient-1);
+        font-size: 20px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: normal;
+        padding: 10px;
+      }
     }
   }
 }
