--- a/src/features/registration/UI/styles.module.scss
+++ b/src/features/registration/UI/styles.module.scss
@@ -1,10 +1,4 @@
 .button {
-  background: radial-gradient(
-      419.34% 136.52% at 0% 100%,
-      rgba(255, 255, 255, 0.2) 0%,
-      rgba(125, 117, 117, 0) 100%
-    ),
-    linear-gradient(90deg, #ff2f66 0%, rgba(254, 110, 48, 0.99) 100%);
   font-size: 14px;
   font-style: normal;
   font-weight: 600;
@@ -12,4 +6,5 @@
   padding: 12px 43px;
   z-index: 3;
   position: absolute;
+  width: min-content;
 }
