--- a/src/shared/styles/global.scss
+++ b/src/shared/styles/global.scss
@@ -194,19 +194,19 @@ body {
   }
 }
 
-// .scroll {
-//   overflow-y: scroll;
+.scroll {
+  overflow-y: scroll;
 
-//   &::-webkit-scrollbar {
-//     width: 2px;
-//     height: 2px;
-//     border-radius: 5px;
-//     cursor: pointer;
-//   }
+  &::-webkit-scrollbar {
+    width: 2px;
+    height: 2px;
+    border-radius: 5px;
+    cursor: pointer;
+  }
 
-//   &::-webkit-scrollbar-thumb {
-//     cursor: pointer;
-//     background-color: #999;
-//     border-radius: 5px;
-//   }
-// }
+  &::-webkit-scrollbar-thumb {
+    cursor: pointer;
+    background-color: #999;
+    border-radius: 5px;
+  }
+}
