--- a/src/features/advProjectCard/UI/styles.module.scss
+++ b/src/features/advProjectCard/UI/styles.module.scss
@@ -1,76 +1,219 @@
-.card {
+.wrapper {
   display: grid;
   grid-auto-flow: row;
-
   border-radius: 12px;
-  border: 1px solid #4772e6;
+  box-shadow: inset 0px 0px 0px 1px var(--Personal-colors-main);
+  // border: 1px solid var(--Personal-colors-main);
   padding-top: 20px;
-  margin-bottom: 10px;
-}
+  height: 210px;
 
-.card__top {
-  display: flex;
-}
-
-.card__left {
-  display: grid;
-  grid-auto-flow: row;
-  row-gap: 10px;
-  width: 35%;
-  border-right: 1px solid #d9d9d9;
-  padding: 0 20px 0 30px;
-
-  p {
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: normal;
-    color: var(--Personal-colors-black);
-  }
-
-  span {
+  .card {
     display: grid;
-    grid-auto-flow: column;
-    align-items: center;
-    justify-content: space-between;
+    grid-template: 1fr / 7.5fr 12fr 1fr;
+    // height: 140px;
 
-    small {
-      color: #a8a4a4;
-      font-size: 12px;
-      font-style: normal;
-      font-weight: 500;
-      line-height: normal;
+    &__description {
+      display: grid;
+      grid-auto-flow: row;
+      row-gap: 20px;
+      padding: 0 20px 0 30px;
+      border-right: 1px solid var(--Card-separator);
+
+      &__data {
+        display: grid;
+        grid-auto-flow: column;
+        align-items: end;
+        justify-content: space-between;
+        padding: 10px 0;
+        border-bottom: 1px solid var(--Card-separator);
+
+        &__title {
+          display: grid;
+          grid-auto-flow: row;
+          row-gap: 10px;
+          p {
+            color: var(--Personal-colors-black);
+            font-size: 16px;
+            font-style: normal;
+            font-weight: 600;
+            line-height: 0.75;
+          }
+          span {
+            color: var(--Personal-colors-black);
+            font-size: 12px;
+            font-style: normal;
+            font-weight: 500;
+            line-height: 0.75;
+          }
+        }
+
+        &__date {
+          display: grid;
+          grid-auto-flow: row;
+          row-gap: 10px;
+
+          span {
+            color: #a8a4a4;
+            font-size: 12px;
+            font-style: normal;
+            font-weight: 500;
+            line-height: 0.75;
+          }
+        }
+      }
+
+      &__status {
+        display: grid;
+        align-items: center;
+        justify-content: center;
+        border-radius: 12px;
+        background: rgba(15, 105, 201, 0.1);
+        padding: 20px 0;
+
+        p {
+          color: var(--Personal-colors-black);
+          font-size: 24px;
+          font-style: normal;
+          font-weight: 500;
+          line-height: normal;
+        }
+      }
+    }
+
+    &__info {
+      display: grid;
+      grid-template: 1.2fr 1fr / 1fr;
+      row-gap: 20px;
+      padding: 0 20px;
+      border-right: 1px solid var(--Card-separator);
+
+      &__data {
+        display: grid;
+        grid-template: 1fr / 3fr 4fr 2fr;
+        border-bottom: 1px solid var(--Card-separator);
+
+        div {
+          display: grid;
+          grid-auto-flow: column;
+          column-gap: 10px;
+          justify-content: start;
+          align-items: center;
+          p {
+            color: var(--Personal-colors-black);
+            font-size: 14px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: 0.75;
+          }
+
+          span {
+            color: var(--Personal-colors-black);
+            font-size: 14px;
+            font-style: normal;
+            font-weight: 500;
+            line-height: 0.75;
+
+            display: grid;
+            grid-auto-flow: column;
+            column-gap: 5px;
+            justify-content: start;
+            align-items: center;
+
+            small {
+              color: var(--Personal-colors-black);
+              font-size: 10px;
+              font-style: normal;
+              font-weight: 500;
+              line-height: 0.75;
+            }
+          }
+        }
+      }
+
+      &__icons {
+        display: grid;
+        grid-template: 1fr / 1fr 1fr 1fr 1fr 1fr;
+        column-gap: 20px;
+
+        div {
+          display: grid;
+          grid-auto-flow: column;
+          align-items: center;
+          column-gap: 10px;
+          padding: 10px 20px;
+          border-radius: 8px;
+          border: 1px solid var(--Personal-colors-main);
+
+          p {
+            color: var(--Personal-colors-black);
+            font-size: 14px;
+            font-style: normal;
+            font-weight: 500;
+            line-height: normal;
+          }
+        }
+      }
     }
   }
-
-  hr {
-    height: 1px;
-    background: #d9d9d9;
-  }
-
-  div {
-    border-radius: 12px;
-    background: rgba(15, 105, 201, 0.1);
-
-    height: 70px;
-    text-align: center;
-    align-items: center;
-    display: grid;
-
-    p {
-      font-size: 26px;
-      font-style: normal;
-      font-weight: 600;
-      line-height: normal;
-      color: var(--Personal-colors-black);
-    }
-  }
 }
+
+// .card__left {
+//   display: grid;
+//   grid-auto-flow: row;
+//   row-gap: 10px;
+//   border-right: 1px solid #d9d9d9;
+//   padding: 0 20px 0 30px;
+
+//   p {
+//     font-size: 16px;
+//     font-style: normal;
+//     font-weight: 600;
+//     line-height: normal;
+//     color: var(--Personal-colors-black);
+//   }
+
+//   span {
+//     display: grid;
+//     grid-auto-flow: column;
+//     align-items: center;
+//     justify-content: space-between;
+
+//     small {
+//       color: #a8a4a4;
+//       font-size: 12px;
+//       font-style: normal;
+//       font-weight: 500;
+//       line-height: normal;
+//     }
+//   }
+
+//   hr {
+//     height: 1px;
+//     background: #d9d9d9;
+//   }
+
+//   div {
+//     border-radius: 12px;
+//     background: rgba(15, 105, 201, 0.1);
+
+//     height: 70px;
+//     text-align: center;
+//     align-items: center;
+//     display: grid;
+
+//     p {
+//       font-size: 26px;
+//       font-style: normal;
+//       font-weight: 600;
+//       line-height: normal;
+//       color: var(--Personal-colors-black);
+//     }
+//   }
+// }
 
 .card__right {
   display: grid;
   grid-auto-flow: row;
-  width: 65%;
   border-right: 1px solid #d9d9d9;
   padding: 0 20px;
 
@@ -110,28 +253,28 @@
   }
 }
 
-.card__info {
-  display: grid;
-  grid-auto-flow: column;
-  align-items: center;
-  justify-content: space-between;
-  color: var(--Personal-colors-black);
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: normal;
+// .card__info {
+//   display: grid;
+//   grid-auto-flow: column;
+//   align-items: center;
+//   justify-content: space-between;
+//   color: var(--Personal-colors-black);
+//   font-size: 14px;
+//   font-style: normal;
+//   font-weight: 500;
+//   line-height: normal;
 
-  div {
-    display: grid;
-    grid-auto-flow: column;
-    align-items: center;
-    column-gap: 10px;
+//   div {
+//     display: grid;
+//     grid-auto-flow: column;
+//     align-items: center;
+//     column-gap: 10px;
 
-    padding: 10px 20px;
-    border-radius: 8px;
-    border: 1px solid #4772e6;
-  }
-}
+//     padding: 10px 20px;
+//     border-radius: 8px;
+//     border: 1px solid #4772e6;
+//   }
+// }
 
 .card__more {
   padding: 0 15px;
