--- a/src/entities/advProjectSubcard/UI/styles.module.scss
+++ b/src/entities/advProjectSubcard/UI/styles.module.scss
@@ -1,265 +1,410 @@
-.subcard__row {
+.subcard {
   display: grid;
-  grid-auto-flow: column;
-  // grid-template-columns: repeat(auto-fit, minmax(0, 1fr));
+  grid-template: 1fr / 12fr 6fr 1fr;
   column-gap: 5px;
   align-items: center;
-}
 
-.subcard__left {
-  display: grid;
-  grid-auto-flow: column;
-  // grid-template-columns: repeat(auto-fit, minmax(0, 1fr));
-  border-radius: 15px;
-  border: 1px solid #d9d9d9;
-  padding: 10px 0;
-  white-space: nowrap;
-}
-
-.channel__preview {
-  display: grid;
-  grid-auto-flow: row;
-  row-gap: 10px;
-  border-right: 1px solid #d9d9d9;
-  padding: 0 40px;
-
-  p {
-    color: var(--Personal-colors-black);
-    text-align: center;
-    font-size: 12px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: normal;
-  }
-
-  span {
-    color: #9e9e9e;
-    text-align: center;
-    font-size: 10px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: normal;
-  }
-}
-.channel__logo {
-  display: grid;
-  align-items: center;
-  justify-content: center;
-
-  img {
-    width: 64px;
-    height: 64px;
-    border-radius: 64px;
-    border: 0.5px solid var(--Gradients-Gradient-1);
-  }
-}
-
-.channel__column {
-  color: var(--Personal-colors-black);
-  border-right: 1px solid #d9d9d9;
-  padding: 0 15px;
-
-  div {
+  &__left {
     display: grid;
-    grid-auto-flow: row;
-    align-items: center;
-    text-align: center;
-    row-gap: 22px;
+    grid-template: 1fr / 0.8fr 0.8fr 0.8fr 1fr;
+    border-radius: 15px;
+    border: 1px solid var(--Card-separator);
     padding: 10px 0;
-  }
+    white-space: nowrap;
 
-  hr {
-    height: 1px;
-    background: #d9d9d9;
-  }
+    &__description {
+      display: grid;
+      grid-auto-flow: row;
+      align-items: center;
+      align-content: center;
+      row-gap: 10px;
+      border-right: 1px solid var(--Card-separator);
 
-  p {
-    font-size: 10px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: normal;
-  }
+      &__logo {
+        display: grid;
+        justify-content: center;
+        align-items: center;
 
-  span {
-    font-size: 12px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-  }
-}
+        img {
+          border-radius: 50%;
+          border: 1px solid var(--Personal-colors-main);
+          width: 64px;
+          height: 64px;
+        }
+      }
 
-.channel__info {
-  display: grid;
-  grid-auto-flow: row;
-  row-gap: 15px;
-  border-radius: 10px;
-  background: rgba(15, 105, 201, 0.1);
-  padding: 15px 30px;
-  margin: 0 10px;
+      &__rate {
+        display: grid;
+        align-items: center;
+        justify-content: center;
+      }
 
-  svg {
-    width: 14px;
-    height: auto;
-  }
-}
+      &__title {
+        display: grid;
+        grid-auto-flow: row;
+        row-gap: 10px;
+        text-align: center;
 
-.channel__info_row {
-  display: grid;
-  grid-auto-flow: column;
-  align-items: center;
-  justify-content: space-between;
-}
+        p {
+          color: var(--Personal-colors-black);
+          font-size: 12px;
+          font-style: normal;
+          font-weight: 600;
+          line-height: 0.75;
+        }
 
-.info {
-  display: grid;
-  grid-auto-flow: row;
-  row-gap: 10px;
-  align-items: center;
+        span {
+          color: #9e9e9e;
+          font-size: 10px;
+          font-style: normal;
+          font-weight: 500;
+          line-height: 0.75;
+        }
+      }
+    }
 
-  div {
-    display: grid;
-    align-items: center;
-    justify-content: center;
-  }
+    &__info {
+      display: grid;
+      grid-auto-flow: row;
+      align-items: center;
+      align-content: center;
+      row-gap: 10px;
+      border-right: 1px solid var(--Card-separator);
+      padding: 0 20px;
 
-  p {
-    color: rgba(0, 0, 0, 0.6);
-    text-align: center;
-    font-size: 8px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: normal;
-  }
+      &__top {
+        padding-bottom: 10px;
+        border-bottom: 1px solid var(--Card-separator);
+      }
 
-  span {
-    color: var(--Personal-colors-black);
-    text-align: center;
-    font-size: 10px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: normal;
-  }
-}
+      div {
+        display: grid;
+        grid-auto-flow: row;
+        row-gap: 20px;
+        text-align: center;
 
-.channel__info_middle {
-  display: grid;
-  grid-auto-flow: column;
-  column-gap: 5px;
-  align-items: center;
-  justify-content: center;
+        p {
+          color: var(--Personal-colors-black);
+          font-size: 10px;
+          font-style: normal;
+          font-weight: 600;
+          line-height: 0.75;
+        }
+        span {
+          color: var(--Personal-colors-black);
+          font-size: 12px;
+          font-style: normal;
+          font-weight: 400;
+          line-height: 0.75;
+        }
+      }
+    }
 
-  div {
-    display: grid;
-    align-items: center;
-    justify-content: center;
+    &__data {
+      display: grid;
+      grid-auto-flow: row;
+      row-gap: 15px;
+      border-radius: 10px;
+      background: rgba(15, 105, 201, 0.1);
+      padding: 15px 30px;
+      margin: 0 10px;
 
-    svg {
-      height: 15px;
-      width: auto;
+      svg {
+        width: 14px;
+        height: auto;
+      }
+
+      &__row {
+        display: grid;
+        grid-auto-flow: column;
+        align-items: center;
+        justify-content: space-between;
+      }
+
+      .info {
+        display: grid;
+        grid-auto-flow: row;
+        row-gap: 10px;
+        align-items: center;
+
+        div {
+          display: grid;
+          align-items: center;
+          justify-content: center;
+        }
+
+        p {
+          color: rgba(0, 0, 0, 0.6);
+          text-align: center;
+          font-size: 8px;
+          font-style: normal;
+          font-weight: 600;
+          line-height: normal;
+        }
+
+        span {
+          color: var(--Personal-colors-black);
+          text-align: center;
+          font-size: 10px;
+          font-style: normal;
+          font-weight: 500;
+          line-height: normal;
+        }
+      }
+
+      &__middle {
+        display: grid;
+        grid-auto-flow: column;
+        column-gap: 5px;
+        align-items: center;
+        justify-content: center;
+
+        div {
+          display: grid;
+          align-items: center;
+          justify-content: center;
+
+          svg {
+            height: 15px;
+            width: auto;
+          }
+        }
+      }
     }
   }
-}
 
-.subcard__status {
-  border-radius: 15px;
-  border: 1px solid #d9d9d9;
-  height: 100%;
-  display: grid;
-  align-items: center;
-  padding: 0 50px;
+  &__active {
+    display: grid;
+    border-radius: 15px;
+    border: 1px solid var(--Card-separator);
+    align-items: center;
+    padding: 0 50px;
+    height: 100%;
 
-  div {
+    div {
+      display: grid;
+      grid-auto-flow: row;
+      row-gap: 10px;
+      align-items: center;
+      text-align: center;
+      justify-content: space-between;
+
+      p {
+        padding: 0 20px;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 600;
+        line-height: normal;
+      }
+
+      span {
+        padding: 0 30px;
+        font-size: 10px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+      }
+    }
+  }
+
+  &__completed {
+    display: grid;
+    border-radius: 15px;
+    border: 1px solid var(--Card-separator);
+    align-items: center;
+    padding: 0 50px;
+    height: 100%;
+
+    div {
+      display: grid;
+      grid-auto-flow: row;
+      row-gap: 10px;
+      align-items: center;
+      text-align: center;
+      justify-content: space-between;
+
+      p {
+        padding: 0 30px;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 600;
+        line-height: 0.75;
+      }
+    }
+  }
+
+  &__accepted {
     display: grid;
     grid-auto-flow: row;
-    row-gap: 10px;
-    align-items: center;
+    align-content: center;
     text-align: center;
-    justify-content: space-between;
-    line-height: 0.75;
+    row-gap: 10px;
+    border-radius: 15px;
+    border: 1px solid var(--Card-separator);
+    padding: 0 50px;
+    height: 100%;
 
     p {
       padding: 0 30px;
       font-size: 16px;
       font-style: normal;
       font-weight: 600;
-      line-height: normal;
+      line-height: 0.75;
     }
 
     span {
-      padding: 0 30px;
       font-size: 10px;
       font-style: normal;
       font-weight: 400;
       line-height: normal;
-
-      small {
-        font-weight: 600;
-      }
     }
+  }
+
+  &__moderation {
+    display: grid;
+    border-radius: 15px;
+    border: 1px solid var(--Card-separator);
+    align-items: center;
+    padding: 0 50px;
+    height: 100%;
 
     div {
       display: grid;
-      grid-auto-flow: column;
-      column-gap: 5px;
+      grid-auto-flow: row;
+      row-gap: 10px;
       align-items: center;
       text-align: center;
-      justify-content: center;
+      justify-content: space-between;
+
+      p {
+        padding: 0 30px;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 600;
+        line-height: 0.75;
+      }
+
+      span {
+        padding: 0 30px;
+        font-size: 10px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+
+        small {
+          font-weight: 600;
+        }
+      }
     }
   }
-}
 
-.colorline {
-  display: grid;
-  grid-auto-flow: column;
-  align-items: center;
-  justify-content: center;
-  height: 3px;
-  border-radius: 15px;
-  max-width: 200px;
-  min-width: 100px;
-  background: linear-gradient(
-    to right,
-    #5c89ff var(--male),
-    #fc65ff var(--male) 100%
-  );
+  &__posted {
+    display: grid;
+    grid-auto-flow: row;
+    row-gap: 15px;
+    align-items: center;
+    align-content: center;
+    padding: 0 50px;
+    text-align: center;
+    border-radius: 15px;
+    border: 1px solid var(--Card-separator);
+    height: 100%;
 
-  &::before {
-    // content: var(--male) " " var(--female);
-    content: attr(data-male);
-    background-size: contain;
-    background-repeat: no-repeat;
-    bottom: 8px;
-    overflow: hidden;
-    position: relative;
+    &__title {
+      display: grid;
+      grid-auto-flow: row;
+      row-gap: 10px;
 
-    color: var(--Subtitle-text);
-    font-size: 8px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: normal;
-    margin-right: 12px;
+      p {
+        padding: 0 30px;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 600;
+        line-height: 0.75;
+      }
+
+      span {
+        padding: 0 30px;
+        font-size: 10px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 0.75;
+      }
+    }
+
+    &__buttons {
+      display: grid;
+      grid-auto-flow: row;
+      row-gap: 5px;
+
+      &__top {
+        display: grid;
+        grid-template: 1fr / 1fr 1fr;
+        column-gap: 5px;
+      }
+    }
   }
 
-  &::after {
-    content: attr(data-female);
-    background-size: contain;
-    background-repeat: no-repeat;
-    bottom: 8px;
-    overflow: hidden;
-    position: relative;
+  &__waiting {
+    display: grid;
+    align-items: center;
+    align-content: center;
+    padding: 0 50px;
+    text-align: center;
+    border-radius: 15px;
+    border: 1px solid var(--Card-separator);
+    height: 100%;
 
-    color: var(--Subtitle-text);
-    font-size: 8px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: normal;
+    div {
+      display: grid;
+      grid-auto-flow: row;
+      row-gap: 15px;
+
+      p {
+        padding: 0 30px;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 600;
+        line-height: normal;
+      }
+    }
   }
-}
 
-.subcard__right {
-  display: grid;
-  align-items: center;
-  height: 100%;
-  border-radius: 15px;
-  border: 1px solid #d9d9d9;
+  &__agreed {
+    display: grid;
+    align-items: center;
+    align-content: center;
+    padding: 0 50px;
+    text-align: center;
+    border-radius: 15px;
+    border: 1px solid var(--Card-separator);
+    height: 100%;
+
+    div {
+      display: grid;
+      grid-auto-flow: row;
+      row-gap: 15px;
+
+      p {
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 600;
+        line-height: normal;
+      }
+      div {
+        display: grid;
+        grid-auto-flow: row;
+        row-gap: 5px;
+      }
+    }
+  }
+
+  &__chat {
+    display: grid;
+    border-radius: 15px;
+    border: 1px solid var(--Card-separator);
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+  }
 }
