--- a/src/features/advProjectCard/UI/styles.module.scss
+++ b/src/features/advProjectCard/UI/styles.module.scss
@@ -189,6 +189,11 @@
 }
 
 .card__btn {
+  display: grid;
+  grid-auto-flow: column;
+  column-gap: 10px;
+  align-items: center;
+  justify-content: center;
   padding: 11px 0;
   width: 100%;
 
@@ -207,5 +212,5 @@
 }
 
 .less {
-  color: var(--Gradients-Gradient-1);
+  color: var(--Personal-colors-main);
 }
