--- a/src/widgets/customers/UI/styles.module.scss
+++ b/src/widgets/customers/UI/styles.module.scss
@@ -1,12 +1,12 @@
-.customers__wrapper {
+.customer {
   margin-bottom: 200px;
-}
 
-.customer__title {
-  color: var(--Personal-colors-black);
-  font-size: 44px;
-  font-style: normal;
-  font-weight: 600;
-  line-height: normal;
-  margin-bottom: 50px;
+  &__title {
+    color: var(--Personal-colors-black);
+    font-size: 44px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    margin-bottom: 50px;
+  }
 }
