--- a/src/widgets/turnkeyPartners/UI/styles.module.scss
+++ b/src/widgets/turnkeyPartners/UI/styles.module.scss
@@ -1,7 +1,7 @@
 .partners {
   align-items: center;
-  text-align: center;
-  margin-bottom: 100px;
+  text-align: left;
+  margin: 100px 0;
   display: grid;
   grid-auto-flow: row;
   row-gap: 50px;
