--- a/src/shared/styles/variables.scss
+++ b/src/shared/styles/variables.scss
@@ -45,6 +45,7 @@
   --Personal-colors-grey: #bdbdbd;
   --Containers: #8c8c8c;
   --Card-separator: #d9d9d9;
+  --URL: #4d94ff;
 
   --woman: 50;
   --man: 50%;
