--- a/src/features/timeList/UI/styles.module.scss
+++ b/src/features/timeList/UI/styles.module.scss
@@ -11,7 +11,7 @@
     font-style: normal;
     font-weight: 500;
     line-height: normal;
-    color: #4772e6;
+    color: var(--Personal-colors-main);
   }
 }
 
@@ -27,7 +27,7 @@
     font-style: normal;
     font-weight: 400;
     line-height: 12px; /* 50% */
-    color: #4772e6;
+    color: var(--Personal-colors-main);
   }
 
   svg {
@@ -36,29 +36,12 @@
   }
 }
 
-.modal {
-  display: grid;
-  align-items: center;
-  justify-content: center;
-
-  position: fixed;
-  z-index: 10;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-  background-color: rgba(0, 0, 0, 0.5);
-  backdrop-filter: blur(5px);
-}
-
-.modalContent {
+.content {
   display: grid;
   align-items: center;
   justify-content: center;
   grid-auto-flow: row;
   position: relative;
-  margin: 15% auto;
   padding: 35px;
   border-radius: 25px;
   background: #fff;
@@ -104,7 +87,7 @@
   align-items: center;
   justify-content: center;
   border-radius: 8px;
-  border: 1px solid #4772e6;
+  box-shadow: inset 0px 0px 0px 1px var(--Personal-colors-main);
   padding: 10px;
   cursor: pointer;
   p {
@@ -118,7 +101,7 @@
 
 .active {
   background: var(--Gradients-Gradient-1);
-  border: none;
+  box-shadow: none;
   p {
     color: var(--Personal-colors-White, #fff);
   }
@@ -126,7 +109,7 @@
 
 .active__in {
   background: rgba(71, 113, 230, 0.5);
-  border: none;
+  box-shadow: none;
   p {
     color: var(--Personal-colors-White, #fff);
   }
@@ -159,14 +142,8 @@
 
 .button {
   padding: 10px;
-  border-radius: 8px;
-  border: 1px solid #4772e6;
-  background: #fff;
-  p {
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: normal;
-    color: #4772e6;
-  }
+  font-style: normal;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: normal;
 }
