--- a/src/shared/ui/MyModal/styles.module.scss
+++ b/src/shared/ui/MyModal/styles.module.scss
@@ -1,23 +1,29 @@
-.myModal {
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  left: 0;
-  display: none;
-  background: rgba(0, 0, 0, 0.5);
-}
-
-.myModalContent {
-  padding: 25px;
-  background: white;
-  border-radius: 16px;
-  min-width: 250px;
-}
-
-.myModal.active {
+.modal {
   display: grid;
-  grid-auto-flow: column;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
+  position: fixed;
+  z-index: 10;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(5px);
+
+  .modalContent {
+    display: grid;
+    align-items: center;
+    justify-content: center;
+    grid-auto-flow: row;
+    position: relative;
+    margin: 15% auto;
+    border-radius: 25px;
+    background: #fff;
+  }
+}
+
+.no__scroll {
+  overflow: hidden;
 }
